# krpcgen

./: README.md
krpcgen/: Cargo.toml
krpcgen/lib/lexer/src/: generic.rs  lib.rs
krpcgen/lib/lexer/src/generic/: matcher.rs  skip.rs  test.rs
krpcgen/lib/rpc/: Cargo.toml
krpcgen/lib/rpc/src/: lib.rs
krpcgen/lib/rpc_generator/: Cargo.toml
krpcgen/lib/rpc_generator/src/: config.rs  file.rs  handle.rs  lib.rs  types.rs
krpcgen/lib/rpc_generator/src/program/: client.rs  server.rs
krpcgen/lib/rpc_generator/src/program/client/: misc.rs  procedure.rs  version.rs
krpcgen/lib/rpc_generator/src/program/server/: misc.rs  procedure.rs  version.rs
krpcgen/lib/rpc_generator/src/types/: asc.rs  printables.rs
krpcgen/lib/rpc_lexer/: Cargo.toml
krpcgen/lib/rpc_lexer/src/: lib.rs  matcher.rs  test.rs
krpcgen/lib/rpc_parser/: Cargo.toml
krpcgen/lib/rpc_parser/src/: lib.rs  test.rs
krpcgen/src/: main.rs
lib/lexer/: Cargo.toml
lib/lexer/src/: lib.rs
lib/lexer/src/generic/: skip.rs
lib/rpc/src/: lib.rs  token.rs
lib/rpc_generator/src/: config.rs  file.rs  lib.rs  make.rs  misc.rs
lib/rpc_lexer/src/: lib.rs
lib/rpc_parser/src/: lib.rs  test.rs
shared/notes/: main.md  misc.md  server.md
shared/report/: Makefile  algs.drawio  report.tex
shared/report/example/: Makefile  constants.h  spec.x  types.h  usage.c
shared/report/inc/: preamble.inc.tex
shared/report/src/: 01-introduction.tex  02-analith.tex  03-construct.tex  04-tech.tex  05-exp.tex  06-conclusion.tex  biblio.bib  biblio.tex  table_of_contents.tex
(+27 files in other folders)
